--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd aws-app && npm ci
+        - npm ci
     build:
       commands:
         - npm run build
